--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h3>Hola mundo</h3>
     <h4>Hola mundo</h4>
     <h5>Hola mundo</h5>
-    <h6>Hola mundo</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa consequuntur quaerat sint nobis sunt cum expedita assumenda consequatur maxime molestiae, non nostrum, unde dolorem provident obcaecati dolor soluta! Ut, sint.</p>
 </body>
 </html>
