--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi primer trabajo</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, ut dolores? Nesciunt corporis fugit explicabo possimus quo vitae odio iure, voluptate sed impedit harum, ducimus tempora nam voluptatibus distinctio nostrum.</h1>
     <h2>Hola mundo</h2>
     <h3>Hola mundo</h3>
     <h4>Hola mundo</h4>
